--- a/image/pav/agent/template-other.yaml
+++ b/image/pav/agent/template-other.yaml
@@ -61,6 +61,7 @@ spec:
           args:
             - csi-plugin
             - {provisioner.metadata.name}
+            - {provisioner.metadata.uid}
             - controller
           volumeMounts:
             - name: socket-dir
@@ -123,6 +124,7 @@ spec:
           args:
             - csi-plugin
             - {provisioner.metadata.name}
+            - {provisioner.metadata.uid}
             - node
             - $(NODE_NAME)
           env:
